-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1
-
None
-
-
0c2e0ce25 (dev), a5dc15824 (6.8)
-
Multimedia wk 49-50
MacOS 15.1
Qt Creator 14.0.2
Qt 6.8.1
Device: Samsung Galaxy S22 13.0, Pixel 3a 12.0
Steps to reproduce:
- Build QML video example - https://doc.qt.io/qt-6/qtmultimedia-video-qmlvideo-example.html
- Run the app.
- Select video and try to apply any effect.
Expected: The effect is applied.
Actual: Errors in the console show that there are no namespaces or types for selected effects.
21:07:05: Starting .../Qt/Examples/Qt-6.8.1/multimedia/video/qmlvideo/build/Qt_6_8_1_for_macOS-Debug/qmlvideoexample.app/Contents/MacOS/qmlvideoexample... QML debugging is enabled. Only use this in a safe environment. qml: source2: qml: source1: 2024-11-14 21:07:07.562 qmlvideoexample[17499:2103615] +[IMKClient subclass]: chose IMKClient_Modern 2024-11-14 21:07:07.562 qmlvideoexample[17499:2103615] +[IMKInputSession subclass]: chose IMKInputSession_Modern qrc:/qt/qml/qmlvideo/SceneMulti.qml:56:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoDrag.qml:4:1: Type SceneDrag unavailable qrc:/qt/qml/qmlvideo/SceneDrag.qml:17:9: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoFullScreen.qml:4:1: Type SceneFullScreen unavailable qrc:/qt/qml/qmlvideo/SceneFullScreen.qml:11:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoFullScreenInverted.qml:4:1: Type SceneFullScreenInverted unavailable qrc:/qt/qml/qmlvideo/SceneFullScreenInverted.qml:11:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoMetadata.qml:14:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoMove.qml:4:1: Type SceneMove unavailable qrc:/qt/qml/qmlvideo/SceneMove.qml:11:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoOverlay.qml:4:1: Type SceneOverlay unavailable qrc:/qt/qml/qmlvideo/SceneOverlay.qml:11:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoPlaybackRate.qml:13:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/SceneMulti.qml:56:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoBasic.qml:4:1: Type SceneBasic unavailable qrc:/qt/qml/qmlvideo/SceneBasic.qml:13:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoDrag.qml:4:1: Type SceneDrag unavailable qrc:/qt/qml/qmlvideo/SceneDrag.qml:17:9: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' qrc:/qt/qml/qmlvideo/VideoFillMode.qml:11:5: Type Content unavailable qrc:/qt/qml/qmlvideo/Content.qml:51:9: Type FrequencyItem unavailable qrc:/qt/qml/frequencymonitor/FrequencyItem.qml:5:1: Module namespace 'frequencymonitor' does not match import URI 'FrequencyMonitor' 21:07:25: /Users/lukaszkosiorowski/Qt/Examples/Qt-6.8.1/multimedia/video/qmlvideo/build/Qt_6_8_1_for_macOS-Debug/qmlvideoexample.app/Contents/MacOS/qmlvideoexample exited with code 0
Reproducibility: 100% **
- is duplicated by
-
QTBUG-131285 [Boot2Qt] Cannot run QML video example app on Boot2Qt device
-
- Open
-
- relates to
-
QTBUG-131285 [Boot2Qt] Cannot run QML video example app on Boot2Qt device
-
- Open
-
-
QTQAINFRA-6723
Qt Test Attack - Q4, 2024
-
- Open
-
-
QTBUG-131350 [QML Video Example] Fails to run on Boot2Qt
-
- Closed
-
-
QTBUG-133278 Inconsistent URI name and import module name in multimedia example
-
- Closed
-
| For Gerrit Dashboard: QTBUG-131286 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 608654,1 | QML Video Example: Change to lowercase URI for qmlRegisterType | dev | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |
| 608698,5 | QML Video Example: Refactor into two QML modules | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 620786,2 | QML Video Example: Refactor into two QML modules | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |