examples/multimedia/video/qmlvideo/qmlvideo/Main.qml
@@ -5,7 +5,7 @@ import QtQuick
 import QtQuick.Controls
 import QtQuick.Layouts
 import QtQuick.Dialogs
-import performancemonitor
+import frequencymonitor
 
 Rectangle {
     id: root
